--- a/setting-up-a-haskell-development-environment-on-arch-linux.html
+++ b/setting-up-a-haskell-development-environment-on-arch-linux.html
@@ -5,18 +5,18 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Space - Setting up a Haskell development environment on Arch Linux</title>
-        <link rel="stylesheet" href="../css/default.css" />
-        <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="./css/default.css" />
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     </head>
     <body>
         <header>
             <div class="logo">
-                <a href="../">Space</a>
+                <a href="./">Space</a>
             </div>
             <nav>
-                <a href="../">Home</a>
-                <a href="../contact.html">Contact</a>
-                <a href="../archive.html">Archive</a>
+                <a href="./">Home</a>
+                <a href="./contact.html">Contact</a>
+                <a href="./archive.html">Archive</a>
             </nav>
         </header>
 
