deploy: 388dc11dae11461afd501dbf969ccf8250ba11f4

--- a/setting-up-a-haskell-development-environment-on-arch-linux.html
+++ b/setting-up-a-haskell-development-environment-on-arch-linux.html
@@ -52,7 +52,7 @@ program-default-options
 <pre><code>cabal install --ghc-options=-dynamic [package to install]</code></pre>
 <p>to let Cabal call GHC enabled dynamic linking.</p>
 <h2 id="install-the-language-server">Install the language server</h2>
-<p>Personally, I would recommend <a href="https://github.com/haskell/haskell-language-server">haskell-language-server</a>, which is active in developing and provide unprecedented coding experience. Because we choose using dynamic GHC, we have to compile HLS by ourselves with dynamic option. Clone the source code:</p>
+<p>Personally, I would recommend <a href="https://github.com/haskell/haskell-language-server">haskell-language-server</a>, which is active in developing and provides unprecedented coding experience. Because we choose using dynamic GHC, we have to compile HLS by ourselves with dynamic option. Clone the source code:</p>
 <pre><code>$ git clone https://github.com/haskell/haskell-language-server --recurse-submodules
 $ cd haskell-language-server</code></pre>
 <p><strong>IMPORTANT:</strong> Configure the HLS project locally:</p>
