deploy: 755361170bcb429167d153582eb3066367c5013f

--- a/setting-up-a-haskell-development-environment-on-arch-linux.html
+++ b/setting-up-a-haskell-development-environment-on-arch-linux.html
@@ -1,28 +1,31 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Space - Setting up a Haskell development environment on Arch Linux</title>
-        <link rel="stylesheet" href="./css/default.css" />
-        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    </head>
-    <body>
-        <header>
-            <div class="logo">
-                <a href="./">Space</a>
-            </div>
-            <nav>
-                <a href="./">Home</a>
-                <a href="./contact.html">Contact</a>
-                <a href="./archive.html">Archive</a>
-            </nav>
-        </header>
 
-        <main role="main">
-            <h1>Setting up a Haskell development environment on Arch Linux</h1>
-            <article>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Space - Setting up a Haskell development environment on Arch Linux</title>
+    <link rel="stylesheet" href="./css/default.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <a href="./">Space</a>
+        </div>
+        <nav>
+            <a href="./">Home</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./archive.html">Archive</a>
+            <a href="./atom.xml">Feed</a>
+        </nav>
+    </header>
+
+    <main role="main">
+        <h1>Setting up a Haskell development environment on Arch Linux</h1>
+        <article>
     <section class="header">
         Posted on October 27, 2020
         
@@ -84,12 +87,13 @@ $ cd haskell-language-server</code></pre>
     <script src="https://utteranc.es/client.js" repo="berberman/space" issue-term="pathname" theme="github-light" crossorigin="anonymous" async>
         </script>
 </article>
-        </main>
+    </main>
 
-        <footer>
-            © 2020 ❤
-            <a href="https://github.com/berberman">berberman</a>
-            WTFPL
-        </footer>
-    </body>
+    <footer>
+        © 2020 ❤
+        <a href="https://github.com/berberman">berberman</a>
+        WTFPL
+    </footer>
+</body>
+
 </html>
