--- a/archive.html
+++ b/archive.html
@@ -1,28 +1,31 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Space - Archives</title>
-        <link rel="stylesheet" href="./css/default.css" />
-        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    </head>
-    <body>
-        <header>
-            <div class="logo">
-                <a href="./">Space</a>
-            </div>
-            <nav>
-                <a href="./">Home</a>
-                <a href="./contact.html">Contact</a>
-                <a href="./archive.html">Archive</a>
-            </nav>
-        </header>
 
-        <main role="main">
-            <h1>Archives</h1>
-            <ul>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Space - Archives</title>
+    <link rel="stylesheet" href="./css/default.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <a href="./">Space</a>
+        </div>
+        <nav>
+            <a href="./">Home</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./archive.html">Archive</a>
+            <a href="./atom.xml">Feed</a>
+        </nav>
+    </header>
+
+    <main role="main">
+        <h1>Archives</h1>
+        <ul>
     
         <li>
             <a href="./setting-up-a-haskell-development-environment-on-arch-linux.html">Setting up a Haskell development environment on Arch Linux</a> - October 27, 2020
@@ -31,12 +34,13 @@
 </ul>
 
 
-        </main>
+    </main>
 
-        <footer>
-            © 2020 ❤
-            <a href="https://github.com/berberman">berberman</a>
-            WTFPL
-        </footer>
-    </body>
+    <footer>
+        © 2020 ❤
+        <a href="https://github.com/berberman">berberman</a>
+        WTFPL
+    </footer>
+</body>
+
 </html>
