--- a/default-language-extensions-enabled-in-ghci.html
+++ b/default-language-extensions-enabled-in-ghci.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Space - Subtle cases in GHCi</title>
+    <title>Space - Default Language Extensions Enabled in GHCi</title>
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
@@ -24,7 +24,7 @@
     </header>
 
     <main role="main">
-        <h1>Subtle cases in GHCi</h1>
+        <h1>Default Language Extensions Enabled in GHCi</h1>
         <article>
     <section class="header">
         Posted on April 11, 2021
